<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.example.amitnsky.popularmovies.utilities.DateUtils" />
        <variable
            name="movie"
            type="com.example.amitnsky.popularmovies.model.Movie" />
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_margin="@dimen/default_margin_header"
                android:layout_weight="1"
                app:cardCornerRadius="@dimen/card_corner_radius"
                app:cardElevation="@dimen/card_elevation"
                app:elevation="@dimen/card_elevation">

                <ImageView
                    android:id="@+id/movie_poster_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/thumbnail_des"
                    android:scaleType="centerCrop"
                    android:src="@{movie.poster_path}" />

            </android.support.v7.widget.CardView>

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/default_margin_header"
                android:layout_marginRight="@dimen/default_margin_header"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_title_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/default_margin_header"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:maxLines="2"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/header_title_text"
                    android:textStyle="bold"
                    android:text="@{movie.title}" />

                <TextView
                    android:id="@+id/release_year_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/movie_release_year"
                    android:textSize="@dimen/header_year_text"
                    android:textStyle="bold"
                    android:text="@{DateUtils.getYear(movie.release_date)}"  />

                <TextView
                    android:id="@+id/duration_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin_header"
                    android:contentDescription="@string/movie_runtime"
                    android:textSize="@dimen/header_runtime_text"
                    android:textStyle="italic"
                    android:text="@{DateUtils.getFormattedRuntime(movie.runtime)}"  />


                    <RatingBar
                        android:id="@+id/rating_rb"
                        style="@style/Widget.AppCompat.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_marginTop="@dimen/default_margin_header"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:numStars="10"
                        android:layout_gravity="start|left"
                        android:rating="@{DateUtils.getRating(movie.vote_average)}"
                        android:stepSize=".1" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>